# blockchain_xelis

./: API.md
xelis_common/: Cargo.toml  build.rs
xelis_common/benches/: homomorphic_encryption.rs  proofs.rs
xelis_common/src/: context.rs
xelis_common/src/api/: query.rs
xelis_common/src/block/: miner.rs
xelis_common/src/contract/: metadata.rs  output.rs  provider.rs  random.rs
xelis_common/src/crypto/elgamal/: signature.rs
xelis_common/src/transaction/: tests.rs
xelis_daemon/src/: main.rs
xelis_daemon/src/core/: mempool.rs  merkle.rs  simulator.rs
xelis_daemon/src/p2p/: chain_sync.rs  chain_validator.rs  connection.rs
xelis_daemon/src/p2p/packet/: chain.rs
xelis_daemon/src/rpc/: rpc.rs
xelis_miner/: Cargo.toml
xelis_miner/src/: main.rs
xelis_wallet/src/: cipher.rs  main.rs  network_handler.rs  transaction_builder.rs  wallet.rs
xelis_wallet/src/api/: rpc.rs
xelis_wallet/src/precomputed_tables/: web.rs
